[gd_scene load_steps=10 format=3 uid="uid://cjbn0gh1alqkt"]

[ext_resource type="Script" path="res://Scripts/Online/OnlineBombEffect.gd" id="1_3y07u"]
[ext_resource type="Texture2D" uid="uid://gwegnvwt1u70" path="res://Assets/Effects/edge.png" id="2_uvqo3"]
[ext_resource type="Texture2D" uid="uid://dj3v0lrhd4pnb" path="res://Assets/Effects/center.png" id="3_0xqx1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cly6r"]
resource_local_to_scene = true
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b82rn"]
resource_local_to_scene = true
size = Vector2(16, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfcp0"]
resource_local_to_scene = true
size = Vector2(0, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xebf8"]
resource_local_to_scene = true
size = Vector2(16, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0bl4q"]
resource_local_to_scene = true
size = Vector2(0, 16)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nu762"]
properties/0/path = NodePath("Sprites/EdgeTop:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Sprites/EdgeRight:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Sprites/EdgeBottom:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Sprites/EdgeLeft:position")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Sprites/Center:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:position")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("Sprites/EdgeTop:visible")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("Sprites/EdgeRight:visible")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("Sprites/EdgeBottom:visible")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("Sprites/EdgeLeft:visible")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath("Sprites/Center:visible")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath(".:currentLoad")
properties/11/spawn = true
properties/11/replication_mode = 1

[node name="BombEffect" type="Node2D" groups=["BombEffect"]]
script = ExtResource("1_3y07u")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Hitboxes" type="Node2D" parent="."]

[node name="HitboxCenter" type="Area2D" parent="Hitboxes"]
collision_layer = 2
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitboxes/HitboxCenter"]
shape = SubResource("RectangleShape2D_cly6r")

[node name="HitboxTop" type="Area2D" parent="Hitboxes"]
position = Vector2(0, -8)
collision_layer = 2
collision_mask = 14

[node name="CollisionTop" type="CollisionShape2D" parent="Hitboxes/HitboxTop"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_b82rn")

[node name="HitboxRight" type="Area2D" parent="Hitboxes"]
position = Vector2(8, 0)
collision_layer = 2
collision_mask = 14

[node name="CollisionRight" type="CollisionShape2D" parent="Hitboxes/HitboxRight"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_bfcp0")

[node name="HitboxBottom" type="Area2D" parent="Hitboxes"]
position = Vector2(0, 8)
collision_layer = 2
collision_mask = 14

[node name="CollisionBottom" type="CollisionShape2D" parent="Hitboxes/HitboxBottom"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_xebf8")

[node name="HitboxLeft" type="Area2D" parent="Hitboxes"]
position = Vector2(-8, 0)
collision_layer = 2
collision_mask = 14

[node name="CollisionLeft" type="CollisionShape2D" parent="Hitboxes/HitboxLeft"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_0bl4q")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RaycastTop" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
target_position = Vector2(0, -10)
collision_mask = 17

[node name="RaycastRight" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
target_position = Vector2(10, 0)
collision_mask = 17

[node name="RaycastBottom" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
target_position = Vector2(0, 10)
collision_mask = 17

[node name="RaycastLeft" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
target_position = Vector2(-10, 0)
collision_mask = 17

[node name="Sprites" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EdgeTop" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
visible = false
texture = ExtResource("2_uvqo3")

[node name="EdgeRight" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
visible = false
rotation = 1.5708
texture = ExtResource("2_uvqo3")

[node name="EdgeBottom" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
visible = false
rotation = 3.14159
texture = ExtResource("2_uvqo3")

[node name="EdgeLeft" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
visible = false
rotation = -1.5708
texture = ExtResource("2_uvqo3")

[node name="Center" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
texture = ExtResource("3_0xqx1")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nu762")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Online/OnlineBombEffectMiddle.tscn")
spawn_path = NodePath("../Sprites")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_shape_entered" from="Hitboxes/HitboxCenter" to="." method="_on_hitbox_center_area_shape_entered"]
[connection signal="area_shape_entered" from="Hitboxes/HitboxTop" to="." method="_on_hitbox_top_area_shape_entered"]
[connection signal="area_shape_entered" from="Hitboxes/HitboxRight" to="." method="_on_hitbox_right_area_shape_entered"]
[connection signal="area_shape_entered" from="Hitboxes/HitboxBottom" to="." method="_on_hitbox_bottom_area_shape_entered"]
[connection signal="area_shape_entered" from="Hitboxes/HitboxLeft" to="." method="_on_hitbox_left_area_shape_entered"]
